--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <%= link_to "Usuarios", users_path, class: "nav-link" %>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Features</a>
@@ -16,7 +16,11 @@
           <a class="nav-link" href="#">Pricing</a>
         </li>
         <li class="nav-item">
-          <li><%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "nav-link" %></li>
+          <% if user_signed_in? %>
+            <li><%= link_to "Cerrar sesión", destroy_user_session_path, data: {turbo_method: :delete}, class: "nav-link" %></li>
+            <% else %>
+            <li><%= link_to "Iniciar sesión", new_user_session_path, class: "nav-link" %></li>
+          <% end %>
         </li>
       </ul>
     </div>
