--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,18 +1,27 @@
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="/">Checkpoint Access</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <%= link_to "Usuarios", users_path, class: "nav-link" %>
+        <li class="nav-item dropdown">
+          <%= link_to "Usuarios", '#', class: "nav-link dropdown-toggle", role: "button", data: {:'bs-toggle' => "dropdown"}, aria: { expanded: "false"} %>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Usuarios", users_path, class: "dropdown-item" %></li>
+            <li><%= link_to "Nuevo usuario", new_user_registration_path, class: "dropdown-item" %></li>
+          </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <li><%= link_to "Registro de entrada", entrances_path, class: "nav-link" %></li>
         </li>
-        <li class="nav-item">
+        <li class="nav-item dropdown">
+          <%= link_to "Empresas", '#', class: "nav-link dropdown-toggle", role: "button", data: {:'bs-toggle' => "dropdown"}, aria: { expanded: "false"} %>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Empresas", companies_path, class: "dropdown-item" %></li>
+            <li><%= link_to "Nueva empresa", new_company_path, class: "dropdown-item" %></li>
+          </ul>
           <a class="nav-link" href="#">Pricing</a>
         </li>
         <li class="nav-item">
