--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,7 +1,13 @@
-<h1>Compañias:</h1>
-<% @companies.each do |company| %>
-  <%= company.name %>
-  <%= link_to "Crear", new_company_path(company) %>
-  <%= link_to "Editar", edit_company_path(company) %>
-  <%= link_to "Borrar", company_path(company), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}%>
-<% end %>
+<div class="container text-center">
+  <div class="row">
+    <h1>Compañias</h1>
+    <%= link_to "Crear", new_company_path(@company), class: 'btn btn-primary mb-5' %>
+    <% @companies.each do |company| %>
+      <div class="col-lg-8 mb-3">
+        <%= company.name %>
+        <%= link_to "Editar", edit_company_path(company) %>
+        <%= link_to "Borrar", company_path(company), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}%>
+      </div>
+    <% end %>
+  </div>
+</div>
