--- a/app/views/entrances/new.html.erb
+++ b/app/views/entrances/new.html.erb
@@ -1,1 +1,14 @@
-<%= simple_form_for :entrance %>
+<h3>Registro de entrada</h3>
+<%= simple_form_for @entrance do |f| %>
+  <%= f.input :date, as: :date, order: [:day, :month, :year], label: "Fecha:  " %>
+  <%= f.input :time, as: :time, label: "Hora:  " %>
+  <%= f.input :first_name, label: "Nombre:  " %>
+  <%= f.input :last_name, label: "Apellido:  " %>
+  <%= f.input :destination, label: "Área que visita:  " %>
+  <%= f.input :comments, as: :text, label: "Comentarios:  " %>
+  <%= f.association :company, label: "Empresa:  " %>
+  <%= f.association :company_vehicle, label_method: :license_plate, label: "Matrícula:  " %>
+  <%= f.input :mileage, label: "Kilometraje  " %>
+  <%= f.submit %>
+<% end %>
+<%= link_to "Volver", entrances_path %>
