--- a/app/views/entrances/index.html.erb
+++ b/app/views/entrances/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Entrances</h1>
+<h1>Entradas</h1>
 <% @entrances.each do |entrance| %>
   Fecha: <%= entrance.date %>
   Hora: <%= entrance.time.strftime("%H:%M:%S") %>
