--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,10 +14,17 @@
           </ul>
         </li>
         <li class="nav-item dropdown">
-          <%= link_to "Ingresos", '#', class: "nav-link dropdown-toggle", role: "button", data: {:'bs-toggle' => "dropdown"}, aria: { expanded: "false"} %>
+          <%= link_to "Entradas", '#', class: "nav-link dropdown-toggle", role: "button", data: {:'bs-toggle' => "dropdown"}, aria: { expanded: "false"} %>
           <ul class="dropdown-menu">
             <li><%= link_to "Todos los ingresos", entrances_path, class: "dropdown-item" %></li>
             <li><%= link_to "Nuevo ingreso", new_entrance_path, class: "dropdown-item" %></li>
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
+          <%= link_to "Salidas", '#', class: "nav-link dropdown-toggle", role: "button", data: {:'bs-toggle' => "dropdown"}, aria: { expanded: "false"} %>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Todas las salidas", exits_path, class: "dropdown-item" %></li>
+            <li><%= link_to "Nueva salida", new_exit_path, class: "dropdown-item" %></li>
           </ul>
         </li>
         <li class="nav-item dropdown">
