--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,11 +1,13 @@
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
+     <img src="https://res.cloudinary.com/alan-v-p/image/upload/v1668114617/development/checkpoint-logo-v1_zxhdoe.png" alt="Logo" width="70" height="64" class="d-inline-block align-text-top">
     <a class="navbar-brand" href="/">Checkpoint Access</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
+      <% if current_user && current_user.admin? %>
         <li class="nav-item dropdown">
           <%= link_to "Usuarios", '#', class: "nav-link dropdown-toggle", role: "button", data: {:'bs-toggle' => "dropdown"}, aria: { expanded: "false"} %>
           <ul class="dropdown-menu">
@@ -13,6 +15,14 @@
             <li><%= link_to "Nuevo usuario", new_user_registration_path, class: "dropdown-item" %></li>
           </ul>
         </li>
+        <li class="nav-item dropdown">
+          <%= link_to "Empresas", '#', class: "nav-link dropdown-toggle", role: "button", data: {:'bs-toggle' => "dropdown"}, aria: { expanded: "false"} %>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Empresas", companies_path, class: "dropdown-item" %></li>
+            <li><%= link_to "Nueva empresa", new_company_path, class: "dropdown-item" %></li>
+          </ul>
+        </li>
+        <% elsif current_user %>
         <li class="nav-item dropdown">
           <%= link_to "Entradas", '#', class: "nav-link dropdown-toggle", role: "button", data: {:'bs-toggle' => "dropdown"}, aria: { expanded: "false"} %>
           <ul class="dropdown-menu">
@@ -27,13 +37,12 @@
             <li><%= link_to "Nueva salida", new_exit_path, class: "dropdown-item" %></li>
           </ul>
         </li>
-        <li class="nav-item dropdown">
-          <%= link_to "Empresas", '#', class: "nav-link dropdown-toggle", role: "button", data: {:'bs-toggle' => "dropdown"}, aria: { expanded: "false"} %>
-          <ul class="dropdown-menu">
-            <li><%= link_to "Empresas", companies_path, class: "dropdown-item" %></li>
-            <li><%= link_to "Nueva empresa", new_company_path, class: "dropdown-item" %></li>
-          </ul>
-        </li>
+        <% end %>
+        <% if current_user %>
+          <li class="nav-link">
+            <%= current_user.email %>
+          </li>
+        <% end %>
         <li class="nav-item">
           <% if user_signed_in? %>
             <li><%= link_to "Cerrar sesión", destroy_user_session_path, data: {turbo_method: :delete}, class: "nav-link" %></li>
