--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,6 +3,8 @@
   <%= link_to "#{user.first_name} #{user.last_name}", show_user_path(user) %>
   <%# <% if current_user.try(:admin?) && !current_user?(user) %>
   <%= link_to "Editar usuario", edit_user_registration_path(user) %>
-  <%= link_to "Borrar usuario", destroy_user_path(user), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
+  <% if user != current_user  %>
+    <%= link_to "Borrar usuario", destroy_user_path(user), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
+  <% end %>
 <% end %>
 <%= link_to "Crear nuevo usuario", new_user_session_path  %>
