--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,12 @@
 <h1>Usuarios</h1>
-<% @users.each do |user| %>
-  <%= link_to "#{user.first_name} #{user.last_name}", show_user_path(user) %>
-  <%# <% if current_user.try(:admin?) && !current_user?(user) %>
-  <%= link_to "Editar usuario", edit_user_registration_path(user) %>
-  <% if user != current_user  %>
-    <%= link_to "Borrar usuario", destroy_user_path(user), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
-  <% end %>
+<ul>
+  <% @users.each do |user| %>
+    <%= link_to "#{user.first_name} #{user.last_name}", user_path(user) %>
+    <%# <% if current_user.try(:admin?) && !current_user?(user) %>
+    <%= link_to "Editar usuario", edit_user_path(user) %>
+    <% if user != current_user  %>
+      <%= link_to "Borrar usuario", user_path(user), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
+    <% end %>
 <% end %>
+</ul>
 <%= link_to "Crear nuevo usuario", new_user_session_path  %>
