--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -42,6 +42,9 @@
           <li class="nav-link">
             <%= current_user.email %>
           </li>
+          <li class="nav-item">
+            <%= link_to "Mi perfil", user_path(current_user), class: "nav-link" %>
+          </li>
         <% end %>
         <li class="nav-item">
           <% if user_signed_in? %>
