--- a/app/views/entrances/new.html.erb
+++ b/app/views/entrances/new.html.erb
@@ -6,8 +6,12 @@
   <%= f.input :last_name, label: "Apellido:  " %>
   <%= f.input :destination, label: "Área que visita:  " %>
   <%= f.input :comments, as: :text, label: "Comentarios:  " %>
-  <%= f.association :company, label: "Empresa:  " %>
-  <%= f.association :company_vehicle, label_method: :license_plate, label: "Matrícula:  " %>
+
+  <div data-controller="company">
+    <%= f.association :company, label: "Empresa:  ", prompt: 'Selecciona una empresa', input_html: {class: 'form-select', data: {action: "change->company#change"}}  %>
+    <%= f.association :company_vehicle, label_method: :license_plate, label: "Matrícula:  ", prompt: 'Selecciona una matrícula', input_html: { class: 'form-select', data: { company_target: "vehicleSelect" }} %> <%# "vehicleSelect es un nombre que nosotros pusimos arbitrariamente para que el controller JS lo identifique como target" %>
+  </div>
+
   <%= f.input :mileage, label: "Kilometraje  " %>
   <%= f.submit %>
 <% end %>
