fixed minor issues on session new

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -1,6 +1,6 @@
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons';
 
-h1 {
-  color: red;
-}
+$dark_blue: 1D2D50;
+$mid_blue: 133B5C;
+$aqua: 1E5F74;
