--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,8 +6,8 @@
   <li>Administrador: <%= @user.admin? ? "Sí" : "No" %></li>
 </ul>
 
-<%= link_to 'Editar', edit_user_registration_path  %>
-<% if @user.admin? %>
+<% if current_user.admin? %>
+  <%= link_to 'Editar', edit_user_path(@user)  %>
   <%= link_to "Volver", users_path %>
 <% else %>
   <%= link_to "Volver", root_path %>
