--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,52 +1,53 @@
-<h2>Crear usuario</h2>
+<div class="container d-flex justify-content-center">
+    <%= render "devise/shared/error_messages", resource: resource %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class:'p-4 form-sessions' }, data: {turbo: false}) do |f| %>
+    <h2 class="text-center mb-3">Crear usuario</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), data: {turbo: false}) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+    <div class="field">
+      <%= f.label :email, class: "my-1 w-100" %><br />
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "my-1 w-100" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <div class="field">
+      <%= f.label :password, class: "my-1 w-100" %>
+      <% if @minimum_password_length %>
+      <em>(<%= @minimum_password_length %> caracteres min)</em>
+      <% end %><br />
+      <%= f.password_field :password, autocomplete: "new-password", class: "my-1 w-100" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
+    <div class="field">
+      <%= f.label :confirmar_password, class: "my-1 w-100" %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "my-1 w-100" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <div class="field">
+      <%= f.label :Nombre, class: "my-1 w-100" %><br />
+      <%= f.text_field :first_name, autofocus: true, class: "my-1 w-100" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true %>
-  </div>
+    <div class="field">
+      <%= f.label :Apellido, class: "my-1 w-100" %><br />
+      <%= f.text_field :last_name, autofocus: true, class: "my-1 w-100" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :last_name %><br />
-    <%= f.text_field :last_name, autofocus: true %>
-  </div>
+    <div class="field">
+      <%= f.label :Turno, class: "my-1 w-100" %><br />
+      <%= f.collection_select :shift, User::SHIFTS, :to_s, :to_s, prompt: 'Selecciona una opción', class: "my-1 w-100" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :shift %><br />
-    <%= f.collection_select :shift, User::SHIFTS, :to_s, :to_s, prompt: true %>
-  </div>
+    <div class="field">
+      <%= f.label :Número_de_empleado, class: "my-1 w-100" %><br />
+      <%= f.text_field :employee_number, autofocus: true, class: "my-1 w-100" %>
+    </div>
 
-  <div class="field">
-    <%= f.label :employee_number %><br />
-    <%= f.text_field :employee_number, autofocus: true %>
-  </div>
+    <div class="field">
+      <%= f.check_box(:admin) %>
+      <%= f.label :Administrador, class: "my-1 w100" %> <br />
+    </div>
 
-  <div class="field">
-    <%= f.check_box(:admin) %>
-    <%= f.label :admin %> <br />
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Crear usuario" %>
-  </div>
-<% end %>
+    <div class="actions">
+      <%= f.submit "Aceptar", class: 'submit-btn my-1 py-1' %>
+    </div>
+  <% end %>
+</div>
