create tables(views) to show all users/entrances/exits

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Raleway:wght@300&family=Rubik&display=swap');
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons';
+// @import "font-awesome";
+
+
+
 
 $dark_blue: #1D2D50;
 $mid_blue: #133B5C;
