--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container text-center">
   <div class="row">
-    <h1>Compañias</h1>
+    <h1>Empresas</h1>
     <%= link_to "Crear", new_company_path(@company), class: 'btn btn-primary mb-5' %>
     <% @companies.each do |company| %>
       <div class="col-lg-8 mb-3">
