--- a/app/views/exits/index.html.erb
+++ b/app/views/exits/index.html.erb
@@ -1,3 +1,36 @@
+<h1 class='text-center'>Salidas</h1>
+<table class="table table-hover text-center">
+  <thead>
+    <tr>
+      <th scope="col">Fecha</th>
+      <th scope="col">Hora</th>
+      <th scope="col">Nombre</th>
+      <th scope="col">Compañía</th>
+      <th scope="col">Matrícula</th>
+      <th scope="col">Kilometraje</th>
+      <th scope="col">Factura</th>
+      <th scope="col">Destino</th>
+      <th scope="col">Creado por</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @exits.each do |exit| %>
+      <tr>
+        <td><%= exit.date.strftime('%d-%m-%y') %></td>
+        <td> <%= exit.time.strftime('%T') %></td>
+        <td><%= "#{exit.first_name} #{exit.last_name}" %></td>
+        <td><%= exit.company.name %></td>
+        <td><%= exit.company_vehicle.license_plate %></td>
+        <td><%= exit.mileage %></td>
+        <td><%= exit.invoice %></td>
+        <td><%= exit.destination %></td>
+        <td><%= "#{exit.user.first_name} #{exit.user.last_name}" %></td>
+      </tr>
+    <% end %>
+
+  </tbody>
+</table>
+
 <h1>Salidas</h1>
 <% @exits.each do |exit| %>
   Fecha: <%= exit.date %>
