--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
   <body>
     <%= render "shared/navbar" %>
     <%= render "shared/flashes" %>
+    <%#= render "layouts/partials/home_page" %>
     <div class="container mt-5">
       <%= yield %>
     </div>
