--- a/app/views/layouts/partials/_home_page.html.erb
+++ b/app/views/layouts/partials/_home_page.html.erb
@@ -1,6 +1,6 @@
 <div class='home-viewport d-flex flex-column align-items-center justify-content-center '>
   <div>
+    <h2>Seguridada para tu compañía</h2>
     <img src="https://res.cloudinary.com/alan-v-p/image/upload/v1671232322/Access%20Point/checkpoint-logo-white-1-800x282_ofltcf.png" alt="Company-logo" class="w-100 home-logo">
-    <h2 class='text-center text-white fw-semibold'>Seguridad para tu compañía.</h2>
   </div>
 </div>
