--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,6 @@
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar navbar-expand-lg navbar-style d-flex align-items-end justify-content-between">
   <div class="container-fluid">
-     <img src="https://res.cloudinary.com/alan-v-p/image/upload/v1668114617/development/checkpoint-logo-v1_zxhdoe.png" alt="Logo" width="70" height="64" class="d-inline-block align-text-top">
-    <a class="navbar-brand" href="/">Checkpoint Access</a>
+     <img src="https://res.cloudinary.com/alan-v-p/image/upload/v1671232322/Access%20Point/checkpoint-logo-white-1-800x282_ofltcf.png" alt="Navbar-logo" width="200" height="64" class="d-inline-block align-text-top">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -22,28 +21,34 @@
             <li><%= link_to "Nueva empresa", new_company_path, class: "dropdown-item" %></li>
           </ul>
         </li>
+        <% end %>
+
+        <% if current_user %>
         <li class="nav-item dropdown">
           <%= link_to "Entradas", '#', class: "nav-link dropdown-toggle", role: "button", data: {:'bs-toggle' => "dropdown"}, aria: { expanded: "false"} %>
           <ul class="dropdown-menu">
             <li><%= link_to "Todos los ingresos", entrances_path, class: "dropdown-item" %></li>
-            <li><%= link_to "Nuevo ingreso", new_entrance_path, class: "dropdown-item" %></li>
+            <% if current_user && !current_user.admin? %>
+              <li><%= link_to "Nuevo ingreso", new_entrance_path, class: "dropdown-item" %></li>
+            <% end  %>
           </ul>
         </li>
+        <% end %>
 
+        <% if current_user %>
         <li class="nav-item dropdown">
           <%= link_to "Salidas", '#', class: "nav-link dropdown-toggle", role: "button", data: {:'bs-toggle' => "dropdown"}, aria: { expanded: "false"} %>
           <ul class="dropdown-menu">
             <li><%= link_to "Todas las salidas", exits_path, class: "dropdown-item" %></li>
-            <li><%= link_to "Nueva salida", new_exit_path, class: "dropdown-item" %></li>
+            <% if current_user && !current_user.admin? %>
+              <li><%= link_to "Nueva salida", new_exit_path, class: "dropdown-item" %></li>
+            <% end %>
           </ul>
         </li>
-
-        <% elsif current_user %>
-
-
         <% end %>
+
         <% if current_user %>
-          <li class="nav-link">
+          <li class="nav-link text-white">
             <%= current_user.email %>
           </li>
           <li class="nav-item">
